<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TextViewForm"
            android:text="@string/tmb_desc"
            android:textColor="@color/black"/>


        <EditText
            android:id="@+id/edit_tmb_weight"
            android:hint="@string/weight"
            style="@style/EditTextForm"
            />

        <EditText
            android:id="@+id/edit_tmb_height"
            android:hint="@string/height"
            style="@style/EditTextForm"
            />

        <EditText
            android:id="@+id/edit_tmb_age"
            style="@style/EditTextForm"
            android:hint="@string/age"
            android:maxLength="2"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/auto_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:text="@string/calculate"
            android:id="@+id/btn_tmb_send"
            style="@style/ButtonForm" />
    </LinearLayout>

</ScrollView>